--- a/dentko/contacts.html
+++ b/dentko/contacts.html
@@ -26,7 +26,7 @@
                         <div class="uk-inline header__dropdown-trigger">
                             <span class="header__dropdown-span">Без выходных <img src="./img/info.svg"></span>
                             <div class="uk-card uk-card-body uk-margin-remove-top header__dropdown-card">
-                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <span class="footer__card-header uk-text-bold">Время работы:</span>
                                 <div class="footer__card-body uk-flex uk-flex-between">
                                     <div class="footer__card-col uk-flex uk-flex-column">
                                         <span>пн-пт:</span>
@@ -221,7 +221,7 @@
     </div>
     <div class="mobile-menu">
         <div class="mobile-menu__services">
-            <h3 class="mobile-menu__title">Наши услуги</h3>
+            <span class="mobile-menu__title">Наши услуги</span>
             <ul uk-accordion>
                 <li>
                     <a class="uk-accordion-title mobile-menu__accordion" href="#">Лечение зубов</a>
@@ -370,9 +370,9 @@
                 <div class="uk-section">
                     <div class="uk-grid-match uk-child-width-1-1@s uk-child-width-1-2@m" uk-grid>
                         <div class="about__side">
-                            <h2 class="uk-h1">Контакты ООО "Дентко-мед"</h2>
+                            <span class="uk-h1">Контакты ООО "Дентко-мед"</span>
                             <div class="about__section">
-                                <h3 class="about__section-header">Адрес и реквизиты:</h3>
+                                <span class="about__section-header">Адрес и реквизиты:</span>
                                 <p class="uk-text uk-text-small">220005, г. Минск, пр-кт. Независимости, 58 ТЦ "Московско-Венский", 3 этаж, п. 142</p>
                                 <p class="uk-text uk-text-small"><span class="uk-text uk-text-small uk-text-bold">Р/сч:</span> BY75TECN30128004200120000000 в ОАО "Технобанк" код TECNBY22</p>
                                 <p class="uk-text uk-text-small">УНП 191081363</p>
@@ -380,7 +380,7 @@
                             <div class="uk-flex uk-flex-between about__row">
                                 <div class="uk-flex uk-flex-column uk-flex-between about__col">
                                     <div class="about__section">
-                                        <h3 class="uk-text-bold about__section-header">Режим работы:</h3>
+                                        <span class="uk-text-bold about__section-header">Режим работы:</span>
                                         <div class="footer__card-body uk-flex uk-flex-between">
                                             <div class="footer__card-col uk-flex uk-flex-column">
                                                 <span class="uk-text-bold">пн-пт:</span>
@@ -395,7 +395,7 @@
                                         </div>
                                     </div>
                                     <div class="about__section">
-                                        <h3 class="uk-text-bold about__section-header">Телефоны:</h3>
+                                        <span class="uk-text-bold about__section-header">Телефоны:</span>
                                         <div class="uk-flex uk-flex-column">
                                             <a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a>
                                             <a href="tel:+375336601313" class="footer__dd-link"><img src="./img/operator2.png">+375 (33) 660-13-13</a>
@@ -407,7 +407,7 @@
                                 </div>
                                 <div class="uk-flex uk-flex-column uk-flex-between about__col">
                                     <div class="about__section">
-                                        <h3 class="uk-text-bold about__section-header">Мы в соцсетях:</h3>
+                                        <span class="uk-text-bold about__section-header">Мы в соцсетях:</span>
                                         <div class="uk-flex-inline uk-flex-between">
                                             <a href="#" class="header__link"><img src="./img/facebook.png" alt="Иконка" class="header__link-img"></a>
                                             <a href="#" class="header__link"><img src="./img/vk.png" alt="Иконка" class="header__link-img"></a>
@@ -415,7 +415,7 @@
                                         </div>
                                     </div>
                                     <div class="about__section">
-                                        <h3 class="uk-text-bold about__section-header">Другие способы:</h3>
+                                        <span class="uk-text-bold about__section-header">Другие способы:</span>
                                         <div class="uk-flex-inline uk-flex-between">
                                             <a href="#" class="header__link"><img src="./img/telegram.png" alt="Иконка" class="header__link-img"></a>
                                             <a href="#" class="header__link"><img src="./img/viber.png" alt="Иконка" class="header__link-img"></a>
@@ -440,7 +440,7 @@
         </section>
         <section class="map">
             <div class="uk-container">
-                <h2 class="uk-h1">Карта проезда:</h2>
+                <span class="uk-h1">Карта проезда:</span>
                 <iframe class="map__item" src="https://www.google.com/maps/d/embed?mid=1vSW3B_R2RqL8zns7yHyZhaQSs1YHeKnE" width="100%" height="480"></iframe>
                 <!-- <iframe class="map__item" src="https://yandex.ru/map-widget/v1/?um=constructor%3A6393c59ee3078ee81c89398dfd411230c56ec46d99f1db7f6ab6c7208a4268ab&amp;source=constructor" width="100%" height="573" frameborder="0"></iframe> -->
             </div>
@@ -448,7 +448,7 @@
         <section class="form form_fullscreen">
             <div class="uk-container">
                 <div class="form__body">
-                    <h2 class="uk-h2">Оставить отзыв</h2>
+                    <span class="uk-h2">Оставить отзыв</span>
                     <p class="uk-text-meta">Пожалуйста, проверьте правильность введенных данных.</p>
                     <form class="uk-flex uk-flex-bottom">
                         <div class="form__inputs form__spread">
@@ -527,7 +527,7 @@
                     </dd>
                 </dl>
                 <div class="uk-card uk-card-body footer__schedule">
-                    <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                    <span class="footer__card-header uk-text-bold">Время работы:</span>
                     <div class="footer__card-body uk-flex uk-flex-between">
                         <div class="footer__card-col uk-flex uk-flex-column">
                             <span>пн-пт:</span>
@@ -562,7 +562,7 @@
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <form class="popup__body">
-                <h2 class="uk-h1">Записаться на прием</h2>
+                <span class="uk-h1">Записаться на прием</span>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
                     <div class="uk-input form__div">
@@ -598,7 +598,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
+                <span class="uk-h1 uk-text-center">Ваша заявка принята!</span>
                 <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
             </div>
         </div>
@@ -607,7 +607,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Произошла ошибка!</h2>
+                <span class="uk-h1 uk-text-center">Произошла ошибка!</span>
                 <p class="uk-text uk-text-center uk-text-small">По техническим причинам ваша заявка не была принята, попробуйте немного позже.</p>
             </div>
         </div>
