--- a/dentko/doctor.html
+++ b/dentko/doctor.html
@@ -27,7 +27,7 @@
                         <div class="uk-inline header__dropdown-trigger">
                             <span class="header__dropdown-span">Без выходных <img src="./img/info.svg"></span>
                             <div class="uk-card uk-card-body uk-margin-remove-top header__dropdown-card">
-                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <span class="footer__card-header uk-text-bold">Время работы:</span>
                                 <div class="footer__card-body uk-flex uk-flex-between">
                                     <div class="footer__card-col uk-flex uk-flex-column">
                                         <span>пн-пт:</span>
@@ -222,7 +222,7 @@
     </div>
     <div class="mobile-menu">
         <div class="mobile-menu__services">
-            <h3 class="mobile-menu__title">Наши услуги</h3>
+            <span class="mobile-menu__title">Наши услуги</span>
             <ul uk-accordion>
                 <li>
                     <a class="uk-accordion-title mobile-menu__accordion" href="#">Лечение зубов</a>
@@ -372,7 +372,7 @@
             <div class="uk-container">
                 <div class="doctor-banner__wrap uk-flex uk-child-width-1-2">
                     <div class="doctor-banner__side">
-                        <h2 class="uk-h1 doctor-banner__title">Титок Наталья Викторовна</h2>
+                        <span class="uk-h1 doctor-banner__title">Титок Наталья Викторовна</span>
                         <div class="uk-flex uk-flex-between doctor-banner__data">
                             <dl class="uk-description-list">
                                 <dt>Специализация:</dt> 
@@ -413,7 +413,7 @@
                             
                         </div>
                         <div class="about__side-stiky">
-                            <h2 class="uk-h1">Профессиональные умения и навыки</h2>
+                            <span class="uk-h1">Профессиональные умения и навыки</span>
                             <ul class="uk-list">
                                 <li class="uk-text uk-text-bold">Высокий профессиональный уровень в области терапевтической  стоматологии.</li>
                                 <li class="uk-text uk-text-bold">Опыт работы  в качестве врача-стоматолога – более 25 лет.</li>
@@ -422,7 +422,7 @@
                             </ul>
                             <p class="uk-text">Обеспечивает стоматологическую терапевтическую помощь взрослым и детям.</p>
                             <p class="uk-text">Знает, умеет и выполняет все технологии и методики диагностики, профилактики и лечения стоматологических заболеваний. Владеет реставрационной техникой с различными пломбировочными композитными материалами. Успешно работает со сложными случаями эндодонтического лечения зубов. Занимается лечением заболеваний маргинального периодонта и слизистой оболочки полости рта.</p>
-                            <h2 class="uk-h1">Образование и сертификаты</h2>
+                            <span class="uk-h1">Образование и сертификаты</span>
                             <div class="about__row">
                                 <span class="about__row-date">1994</span>
                                 <ul class="about__row-list">
@@ -479,7 +479,7 @@
         <section class="reviews">
             <div class="uk-container">
                 <div class="uk-flex uk-flex-between uk-flex-middle">
-                    <h2 class="uk-h2">Отзывы наших клиентов</h2>
+                    <span class="uk-h2">Отзывы наших клиентов</span>
                     <a href="#" class="uk-link green-link">Все отзывы</a>
                 </div>
                 <div class="uk-flex uk-flex-center reviews__slider" uk-slider="finite: true; center: true;">
@@ -489,7 +489,7 @@
                                 <div class="uk-card uk-card-body review">
                                     <div class="review__head uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
-                                            <h4 class="review__name">Виктория</h4>
+                                            <span class="review__name">Виктория</span>
                                             <img src="./img/rating.png" alt="Рейтинг" class="review__rating">
                                         </div>
                                         <div class="review__body">
@@ -499,7 +499,7 @@
                                     <hr>
                                     <div class="review__bottom uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
-                                            <h4 class="review__name">Оказание услуги:</h4>
+                                            <span class="review__name">Оказание услуги:</span>
                                             <span class="uk-text uk-text-small">Лечение кариеса</span>
                                         </div>
                                         <div class="review__controls uk-flex uk-flex-middle">
@@ -516,7 +516,7 @@
                                 <div class="uk-card uk-card-body review">
                                     <div class="review__head uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
-                                            <h4 class="review__name">Виктория</h4>
+                                            <span class="review__name">Виктория</span>
                                             <img src="./img/rating.png" alt="Рейтинг" class="review__rating">
                                         </div>
                                         <div class="review__body">
@@ -526,7 +526,7 @@
                                     <hr>
                                     <div class="review__bottom uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
-                                            <h4 class="review__name">Оказание услуги:</h4>
+                                            <span class="review__name">Оказание услуги:</span>
                                             <span class="uk-text uk-text-small">Лечение кариеса</span>
                                         </div>
                                         <div class="review__controls uk-flex uk-flex-middle">
@@ -543,7 +543,7 @@
                                 <div class="uk-card uk-card-body review">
                                     <div class="review__head uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
-                                            <h4 class="review__name">Виктория</h4>
+                                            <span class="review__name">Виктория</span>
                                             <img src="./img/rating.png" alt="Рейтинг" class="review__rating">
                                         </div>
                                         <div class="review__body">
@@ -553,7 +553,7 @@
                                     <hr>
                                     <div class="review__bottom uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
-                                            <h4 class="review__name">Оказание услуги:</h4>
+                                            <span class="review__name">Оказание услуги:</span>
                                             <span class="uk-text uk-text-small">Лечение кариеса</span>
                                         </div>
                                         <div class="review__controls uk-flex uk-flex-middle">
@@ -570,7 +570,7 @@
                                 <div class="uk-card uk-card-body review">
                                     <div class="review__head uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
-                                            <h4 class="review__name">Виктория</h4>
+                                            <span class="review__name">Виктория</span>
                                             <img src="./img/rating.png" alt="Рейтинг" class="review__rating">
                                         </div>
                                         <div class="review__body">
@@ -580,7 +580,7 @@
                                     <hr>
                                     <div class="review__bottom uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
-                                            <h4 class="review__name">Оказание услуги:</h4>
+                                            <span class="review__name">Оказание услуги:</span>
                                             <span class="uk-text uk-text-small">Лечение кариеса</span>
                                         </div>
                                         <div class="review__controls uk-flex uk-flex-middle">
@@ -597,7 +597,7 @@
                                 <div class="uk-card uk-card-body review">
                                     <div class="review__head uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
-                                            <h4 class="review__name">Виктория</h4>
+                                            <span class="review__name">Виктория</span>
                                             <img src="./img/rating.png" alt="Рейтинг" class="review__rating">
                                         </div>
                                         <div class="review__body">
@@ -607,7 +607,7 @@
                                     <hr>
                                     <div class="review__bottom uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
-                                            <h4 class="review__name">Оказание услуги:</h4>
+                                            <span class="review__name">Оказание услуги:</span>
                                             <span class="uk-text uk-text-small">Лечение кариеса</span>
                                         </div>
                                         <div class="review__controls uk-flex uk-flex-middle">
@@ -631,12 +631,12 @@
                 <div class="doctors__bg_gray"></div>
             </div>
             <div class="uk-container">
-                <h2 class="uk-h2">Наши врачи</h2>
+                <span class="uk-h2">Наши врачи</span>
                 <div class="uk-slider-container" uk-slider="finite: true">
                     <ul class="uk-slider-items uk-child-width-1-1 doctors__slider">
                         <li class="uk-position-relative uk-flex uk-flex-bottom uk-child-width-1-2 doctor">
                             <div class="uk-flex uk-flex-column uk-flex-left uk-flex-between doctor__data">
-                                <h3 class="uk-text-bold uk-position-relative doctor__name">Дубина <br>Иван Владимирович</h3>
+                                <span class="uk-text-bold uk-position-relative doctor__name">Дубина <br>Иван Владимирович</span>
                                 <div class="doctor__bottom">
                                     <span class="uk-text doctor__specialty">врач-стоматолог-ортопед</span>
                                     <a href="#" class="green-link doctor__link">Подробнее</a>
@@ -655,7 +655,7 @@
                         </li>
                         <li class="uk-position-relative uk-flex uk-flex-bottom uk-child-width-1-2 doctor">
                             <div class="uk-flex uk-flex-column uk-flex-between doctor__data">
-                                <h3 class="uk-text-bold uk-position-relative doctor__name">Дубина <br>Иван Владимирович</h3>
+                                <span class="uk-text-bold uk-position-relative doctor__name">Дубина <br>Иван Владимирович</span>
                                 <span class="uk-text doctor__specialty">врач-стоматолог-ортопед</span>
                                 <a href="#" class="green-link doctor__link">Подробнее</a>
                             </div>
@@ -672,7 +672,7 @@
                         </li>
                         <li class="uk-position-relative uk-flex uk-flex-bottom uk-child-width-1-2 doctor">
                             <div class="uk-flex uk-flex-column uk-flex-between doctor__data">
-                                <h3 class="uk-text-bold uk-position-relative doctor__name">Дубина <br>Иван Владимирович</h3>
+                                <span class="uk-text-bold uk-position-relative doctor__name">Дубина <br>Иван Владимирович</span>
                                 <span class="uk-text doctor__specialty">врач-стоматолог-ортопед</span>
                                 <a href="#" class="green-link doctor__link">Подробнее</a>
                             </div>
@@ -757,7 +757,7 @@
                     </dd>
                 </dl>
                 <div class="uk-card uk-card-body footer__schedule">
-                    <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                    <span class="footer__card-header uk-text-bold">Время работы:</span>
                     <div class="footer__card-body uk-flex uk-flex-between">
                         <div class="footer__card-col uk-flex uk-flex-column">
                             <span>пн-пт:</span>
@@ -792,7 +792,7 @@
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <form class="popup__body">
-                <h2 class="uk-h1">Записаться на прием</h2>
+                <span class="uk-h1">Записаться на прием</span>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
                     <div class="uk-input form__div">
@@ -828,7 +828,7 @@
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <form class="popup__body">
-                <h2 class="uk-h1">Задать вопрос врачу</h2>
+                <span class="uk-h1">Задать вопрос врачу</span>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-2 popup__row">
                     <div class="uk-input form__div">
@@ -853,7 +853,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
+                <span class="uk-h1 uk-text-center">Ваша заявка принята!</span>
                 <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
             </div>
         </div>
@@ -862,7 +862,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Произошла ошибка!</h2>
+                <span class="uk-h1 uk-text-center">Произошла ошибка!</span>
                 <p class="uk-text uk-text-center uk-text-small">По техническим причинам ваша заявка не была принята, попробуйте немного позже.</p>
             </div>
         </div>
