--- a/dentko/faq/faq.html
+++ b/dentko/faq/faq.html
@@ -27,7 +27,7 @@
                         <div class="uk-inline header__dropdown-trigger">
                             <span class="header__dropdown-span">Без выходных <img src="/dentko/img/info.svg"></span>
                             <div class="uk-card uk-card-body uk-margin-remove-top header__dropdown-card">
-                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <span class="footer__card-header uk-text-bold">Время работы:</span>
                                 <div class="footer__card-body uk-flex uk-flex-between">
                                     <div class="footer__card-col uk-flex uk-flex-column">
                                         <span>пн-пт:</span>
@@ -222,7 +222,7 @@
     </div>
     <div class="mobile-menu">
         <div class="mobile-menu__services">
-            <h3 class="mobile-menu__title">Наши услуги</h3>
+            <span class="mobile-menu__title">Наши услуги</span>
             <ul uk-accordion>
                 <li>
                     <a class="uk-accordion-title mobile-menu__accordion" href="#">Лечение зубов</a>
@@ -369,7 +369,7 @@
         <section class="faqs">
             <div class="uk-container">
                 <div class="uk-flex uk-flex-between uk-flex-middle reviews__header">
-                    <h2 class="uk-h1">Ответы на вопросы</h2>
+                    <span class="uk-h1">Ответы на вопросы</span>
                     <button class="uk-button uk-button-default button button_big">Задать вопрос<img src="/dentko/img/inline-arrow-w.svg"></button>
                 </div>
                 <div class="faqs__wrap">
@@ -526,7 +526,7 @@
         <section id="form" class="form">
             <div class="uk-container">
                 <div class="form__body">
-                    <h2 class="uk-h2">Задать вопрос врачу</h2>
+                    <span class="uk-h2">Задать вопрос врачу</span>
                     <p class="uk-text-meta">Пожалуйста, проверьте правильность введенных данных.</p>
                     <form class="uk-flex uk-flex-bottom">
                         <div class="form__inputs">
@@ -622,7 +622,7 @@
                     </dd>
                 </dl>
                 <div class="uk-card uk-card-body footer__schedule">
-                    <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                    <span class="footer__card-header uk-text-bold">Время работы:</span>
                     <div class="footer__card-body uk-flex uk-flex-between">
                         <div class="footer__card-col uk-flex uk-flex-column">
                             <span>пн-пт:</span>
@@ -657,7 +657,7 @@
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <form class="popup__body">
-                <h2 class="uk-h1">Записаться на прием</h2>
+                <span class="uk-h1">Записаться на прием</span>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
                     <div class="uk-input form__div">
@@ -693,7 +693,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
+                <span class="uk-h1 uk-text-center">Ваша заявка принята!</span>
                 <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
             </div>
         </div>
@@ -702,7 +702,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Произошла ошибка!</h2>
+                <span class="uk-h1 uk-text-center">Произошла ошибка!</span>
                 <p class="uk-text uk-text-center uk-text-small">По техническим причинам ваша заявка не была принята, попробуйте немного позже.</p>
             </div>
         </div>
