--- a/dentko/payment.html
+++ b/dentko/payment.html
@@ -26,7 +26,7 @@
                         <div class="uk-inline header__dropdown-trigger">
                             <span class="header__dropdown-span">Без выходных <img src="./img/info.svg"></span>
                             <div class="uk-card uk-card-body uk-margin-remove-top header__dropdown-card">
-                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <span class="footer__card-header uk-text-bold">Время работы:</span>
                                 <div class="footer__card-body uk-flex uk-flex-between">
                                     <div class="footer__card-col uk-flex uk-flex-column">
                                         <span>пн-пт:</span>
@@ -221,7 +221,7 @@
     </div>
     <div class="mobile-menu">
         <div class="mobile-menu__services">
-            <h3 class="mobile-menu__title">Наши услуги</h3>
+            <span class="mobile-menu__title">Наши услуги</span>
             <ul uk-accordion>
                 <li>
                     <a class="uk-accordion-title mobile-menu__accordion" href="#">Лечение зубов</a>
@@ -367,7 +367,7 @@
         </section>
         <section class="text text_fullscreen">
             <div class="uk-container">
-                <h2 class="uk-h1">Врачи клиники Дентко: специалисты, которым доверяют</h2>
+                <span class="uk-h1">Врачи клиники Дентко: специалисты, которым доверяют</span>
                 <p class="uk-text uk-text-medium uk-text-bold">Оплатить услуги стоматологии "Дентко" можно наличными денежными средствами и банковскими платежными карточками на ресепшене после приема врача, а также оформить рассрочку на оказанные услуги.</p>
                 <p class="uk-text uk-text-medium">Мечта о белоснежной улыбке сейчас осуществима для каждого. Ведь современная стоматология готова предложить вам услуги восстановления зубного ряда даже при полной адентии. Опытный врач всегда подберет подходящее решение. Вот только рассчитывать на дешевизну не приходится. Ведь цены определяются отнюдь не амбициями клиники, а рядом факторов, влияющих на качество лечения и уровень оказания услуг:</p>
                 <div class="uk-column-1-2@s uk-width-child-1-2">
@@ -389,7 +389,7 @@
                             </div>
                         </div>
                         <div class="about__side">
-                            <h2 class="uk-h1">Стоматология в рассрочку – это выгодно</h2>
+                            <span class="uk-h1">Стоматология в рассрочку – это выгодно</span>
                             <p class="uk-text-normal">Конечно, любую сумму можно накопить. Но вылечить зубы в рассрочку – в разы выгоднее. И вот почему:</p>
                             <ul class="uk-list">
                                 <li>На начальной стадии кариес лечится за 20 минут – достаточно удалить пораженные бактериями ткани и установить пломбу;</li>
@@ -408,7 +408,7 @@
         </section>
         <section class="text text_fullscreen">
             <div class="uk-container">
-                <h2 class="uk-h1">Стоматология в рассрочку в Минске</h2>
+                <span class="uk-h1">Стоматология в рассрочку в Минске</span>
                 <p class="uk-text uk-text-medium">Один из принципов современной стоматологии – это комфорт. Касается он и предоставления финансовых услуг. Так, чтобы получить деньги на лечение, вам не придется самостоятельно обращаться в банк – достаточно записаться на консультацию стоматолога-терапевта в «Дентко»:</p>
                 <div class="uk-column-1-2@s uk-width-child-1-2">
                     <p class="uk-text text__item">Врач осмотрит полость рта, подберет методы лечения и протезирования, распишет для вас их стоимость;</p>
@@ -485,7 +485,7 @@
                     </dd>
                 </dl>
                 <div class="uk-card uk-card-body footer__schedule">
-                    <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                    <span class="footer__card-header uk-text-bold">Время работы:</span>
                     <div class="footer__card-body uk-flex uk-flex-between">
                         <div class="footer__card-col uk-flex uk-flex-column">
                             <span>пн-пт:</span>
@@ -520,7 +520,7 @@
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <form class="popup__body">
-                <h2 class="uk-h1">Записаться на прием</h2>
+                <span class="uk-h1">Записаться на прием</span>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
                     <div class="uk-input form__div">
@@ -556,7 +556,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
+                <span class="uk-h1 uk-text-center">Ваша заявка принята!</span>
                 <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
             </div>
         </div>
@@ -565,7 +565,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Произошла ошибка!</h2>
+                <span class="uk-h1 uk-text-center">Произошла ошибка!</span>
                 <p class="uk-text uk-text-center uk-text-small">По техническим причинам ваша заявка не была принята, попробуйте немного позже.</p>
             </div>
         </div>
