--- a/dentko/team.html
+++ b/dentko/team.html
@@ -26,7 +26,7 @@
                         <div class="uk-inline header__dropdown-trigger">
                             <span class="header__dropdown-span">Без выходных <img src="./img/info.svg"></span>
                             <div class="uk-card uk-card-body uk-margin-remove-top header__dropdown-card">
-                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <span class="footer__card-header uk-text-bold">Время работы:</span>
                                 <div class="footer__card-body uk-flex uk-flex-between">
                                     <div class="footer__card-col uk-flex uk-flex-column">
                                         <span>пн-пт:</span>
@@ -221,7 +221,7 @@
     </div>
     <div class="mobile-menu">
         <div class="mobile-menu__services">
-            <h3 class="mobile-menu__title">Наши услуги</h3>
+            <span class="mobile-menu__title">Наши услуги</span>
             <ul uk-accordion>
                 <li>
                     <a class="uk-accordion-title mobile-menu__accordion" href="#">Лечение зубов</a>
@@ -367,13 +367,13 @@
         </section>
         <section class="team">
             <div class="uk-container">
-                <h1 class="uk-h1">Наши специалисты</h1>
+                <span class="uk-h1">Наши специалисты</h1>
                 <div class="team__wrapper">
                     <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team1.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
-                                <h3 class="uk-text uk-text-bold uk-text-large member__name">Филатова<br>Наталья Валерьевна</h3>
+                                <span class="uk-text uk-text-bold uk-text-large member__name">Филатова<br>Наталья Валерьевна</span>
                                 <div class="member__row uk-flex uk-flex-between">
                                     <dl class="uk-description-list">
                                         <dt class="uk-text">Специализация:</dt>
@@ -397,7 +397,7 @@
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team2.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
-                                <h3 class="uk-text uk-text-bold uk-text-large member__name">Дубина<br>Иван Владимирович</h3>
+                                <span class="uk-text uk-text-bold uk-text-large member__name">Дубина<br>Иван Владимирович</span>
                                 <div class="member__row uk-flex uk-flex-between">
                                     <dl class="uk-description-list">
                                         <dt class="uk-text">Специализация:</dt>
@@ -421,7 +421,7 @@
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team3.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
-                                <h3 class="uk-text uk-text-bold uk-text-large member__name">Полищук<br>Инесса Францевна</h3>
+                                <span class="uk-text uk-text-bold uk-text-large member__name">Полищук<br>Инесса Францевна</span>
                                 <div class="member__row uk-flex uk-flex-between">
                                     <dl class="uk-description-list">
                                         <dt class="uk-text">Специализация:</dt>
@@ -445,7 +445,7 @@
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team4.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
-                                <h3 class="uk-text uk-text-bold uk-text-large member__name">Ровбо<br>Роман Владимирович</h3>
+                                <span class="uk-text uk-text-bold uk-text-large member__name">Ровбо<br>Роман Владимирович</span>
                                 <div class="member__row uk-flex uk-flex-between">
                                     <dl class="uk-description-list">
                                         <dt class="uk-text">Специализация:</dt>
@@ -469,7 +469,7 @@
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team5.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
-                                <h3 class="uk-text uk-text-bold uk-text-large member__name">Титок<br>Наталья Викторовна</h3>
+                                <span class="uk-text uk-text-bold uk-text-large member__name">Титок<br>Наталья Викторовна</span>
                                 <div class="member__row uk-flex uk-flex-between">
                                     <dl class="uk-description-list">
                                         <dt class="uk-text">Специализация:</dt>
@@ -493,7 +493,7 @@
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team6.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
-                                <h3 class="uk-text uk-text-bold uk-text-large member__name">Чухрай<br>Анастасия Валерьевна</h3>
+                                <span class="uk-text uk-text-bold uk-text-large member__name">Чухрай<br>Анастасия Валерьевна</span>
                                 <div class="member__row uk-flex uk-flex-between">
                                     <dl class="uk-description-list">
                                         <dt class="uk-text">Специализация:</dt>
@@ -517,7 +517,7 @@
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team7.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
-                                <h3 class="uk-text uk-text-bold uk-text-large member__name">Унучек<br>Максим Валерьевич</h3>
+                                <span class="uk-text uk-text-bold uk-text-large member__name">Унучек<br>Максим Валерьевич</span>
                                 <div class="member__row uk-flex uk-flex-between">
                                     <dl class="uk-description-list">
                                         <dt class="uk-text">Специализация:</dt>
@@ -541,7 +541,7 @@
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team8.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
-                                <h3 class="uk-text uk-text-bold uk-text-large member__name">Михновец<br>Дмитрий Анатольевич</h3>
+                                <span class="uk-text uk-text-bold uk-text-large member__name">Михновец<br>Дмитрий Анатольевич</span>
                                 <div class="member__row uk-flex uk-flex-between">
                                     <dl class="uk-description-list">
                                         <dt class="uk-text">Специализация:</dt>
@@ -565,7 +565,7 @@
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team9.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
-                                <h3 class="uk-text uk-text-bold uk-text-large member__name">Мамай<br>Татьяна Анатольевна</h3>
+                                <span class="uk-text uk-text-bold uk-text-large member__name">Мамай<br>Татьяна Анатольевна</span>
                                 <div class="member__row uk-flex uk-flex-between">
                                     <dl class="uk-description-list">
                                         <dt class="uk-text">Специализация:</dt>
@@ -589,7 +589,7 @@
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team10.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
-                                <h3 class="uk-text uk-text-bold uk-text-large member__name">Юревич<br>Игорь Александрович</h3>
+                                <span class="uk-text uk-text-bold uk-text-large member__name">Юревич<br>Игорь Александрович</span>
                                 <div class="member__row uk-flex uk-flex-between">
                                     <dl class="uk-description-list">
                                         <dt class="uk-text">Специализация:</dt>
@@ -678,7 +678,7 @@
                     </dd>
                 </dl>
                 <div class="uk-card uk-card-body footer__schedule">
-                    <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                    <span class="footer__card-header uk-text-bold">Время работы:</span>
                     <div class="footer__card-body uk-flex uk-flex-between">
                         <div class="footer__card-col uk-flex uk-flex-column">
                             <span>пн-пт:</span>
@@ -713,7 +713,7 @@
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <form class="popup__body">
-                <h2 class="uk-h1">Записаться на прием</h2>
+                <span class="uk-h1">Записаться на прием</span>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
                     <div class="uk-input form__div">
@@ -749,7 +749,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
+                <span class="uk-h1 uk-text-center">Ваша заявка принята!</span>
                 <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
             </div>
         </div>
@@ -758,7 +758,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Произошла ошибка!</h2>
+                <span class="uk-h1 uk-text-center">Произошла ошибка!</span>
                 <p class="uk-text uk-text-center uk-text-small">По техническим причинам ваша заявка не была принята, попробуйте немного позже.</p>
             </div>
         </div>
