--- a/dentko/about.html
+++ b/dentko/about.html
@@ -26,7 +26,7 @@
                         <div class="uk-inline header__dropdown-trigger">
                             <span class="header__dropdown-span">Без выходных <img src="./img/info.svg"></span>
                             <div class="uk-card uk-card-body uk-margin-remove-top header__dropdown-card">
-                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <span class="footer__card-header uk-text-bold">Время работы:</span>
                                 <div class="footer__card-body uk-flex uk-flex-between">
                                     <div class="footer__card-col uk-flex uk-flex-column">
                                         <span>пн-пт:</span>
@@ -221,7 +221,7 @@
     </div>
     <div class="mobile-menu">
         <div class="mobile-menu__services">
-            <h3 class="mobile-menu__title">Наши услуги</h3>
+            <span class="mobile-menu__title">Наши услуги</span>
             <ul uk-accordion>
                 <li>
                     <a class="uk-accordion-title mobile-menu__accordion" href="#">Лечение зубов</a>
@@ -370,7 +370,7 @@
                 <div class="uk-section">
                     <div class="uk-grid-match uk-child-width-1-1@s uk-child-width-1-2@m about__reverse" uk-grid>
                         <div class="about__side">
-                            <h2 class="uk-h1">О компании</h2>
+                            <span class="uk-h1">О компании</span>
                             <p class="uk-text-normal">Стоматологическая клиника «Дентко» — это мир высоких стоматологических технологий, комфорта и домашнего уюта.</p>
                             <p class="uk-text-bold">Мы предлагаем своим пациентам полный комплекс стоматологических услуг:</p>
                             <ul class="uk-list">
@@ -485,7 +485,7 @@
                     </dd>
                 </dl>
                 <div class="uk-card uk-card-body footer__schedule">
-                    <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                    <span class="footer__card-header uk-text-bold">Время работы:</span>
                     <div class="footer__card-body uk-flex uk-flex-between">
                         <div class="footer__card-col uk-flex uk-flex-column">
                             <span>пн-пт:</span>
@@ -520,7 +520,7 @@
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <form class="popup__body">
-                <h2 class="uk-h1">Записаться на прием</h2>
+                <span class="uk-h1">Записаться на прием</span>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
                     <div class="uk-input form__div">
@@ -556,7 +556,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
+                <span class="uk-h1 uk-text-center">Ваша заявка принята!</span>
                 <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
             </div>
         </div>
@@ -565,7 +565,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Произошла ошибка!</h2>
+                <span class="uk-h1 uk-text-center">Произошла ошибка!</span>
                 <p class="uk-text uk-text-center uk-text-small">По техническим причинам ваша заявка не была принята, попробуйте немного позже.</p>
             </div>
         </div>
