--- a/dentko/price.html
+++ b/dentko/price.html
@@ -26,7 +26,7 @@
                         <div class="uk-inline header__dropdown-trigger">
                             <span class="header__dropdown-span">Без выходных <img src="./img/info.svg"></span>
                             <div class="uk-card uk-card-body uk-margin-remove-top header__dropdown-card">
-                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <span class="footer__card-header uk-text-bold">Время работы:</span>
                                 <div class="footer__card-body uk-flex uk-flex-between">
                                     <div class="footer__card-col uk-flex uk-flex-column">
                                         <span>пн-пт:</span>
@@ -221,7 +221,7 @@
     </div>
     <div class="mobile-menu">
         <div class="mobile-menu__services">
-            <h3 class="mobile-menu__title">Наши услуги</h3>
+            <span class="mobile-menu__title">Наши услуги</span>
             <ul uk-accordion>
                 <li>
                     <a class="uk-accordion-title mobile-menu__accordion" href="#">Лечение зубов</a>
@@ -367,7 +367,7 @@
         </section>
         <section class="text text_fullscreen accordion">
             <div class="uk-container">
-                <h2 class="uk-h1">Цены на стоматологические услуги</h2>
+                <span class="uk-h1">Цены на стоматологические услуги</span>
                 <p class="uk-text uk-text-medium">Одних людей в стоматологии пугает сам процесс лечения, а других – стоимость услуг. В медицинском центре «Дентко» вы сможете попрощаться со своими страхами навсегда: лечить и протезировать зубы у нас совсем не больно, а цены на стоматологические услуги доступны большинству минчан. Кроме того, у нас <span class="uk-text-bold">вы можете воспользоваться беспроцентной рассрочкой.</span></p>
                 <ul uk-accordion>
                     <li>
@@ -546,7 +546,7 @@
         <section class="form">
             <div class="uk-container">
                 <div class="form__body">
-                    <h2 class="uk-h2">Консультация стоматолога</h2>
+                    <span class="uk-h2">Консультация стоматолога</span>
                     <p class="uk-text-meta">Запишитесь на прием к стоматологу в «Дентко» - и мы поможем вам обрести здоровую и счастливую улыбку.</p>
                     <form class="uk-flex uk-flex-middle">
                         <div class="uk-input form__div">
@@ -561,7 +561,7 @@
                         <div class="uk-position-relative form__dropdown-wrap">
                             <span class="form__schedule">Посмотреть режим работы  <img src="./img/info-w.svg"></span>
                             <div class="uk-position-absolute uk-card uk-card-body uk-margin-remove-top form__dropdown-card">
-                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <span class="footer__card-header uk-text-bold">Время работы:</span>
                                 <div class="footer__card-body uk-flex uk-flex-between">
                                     <div class="footer__card-col uk-flex uk-flex-column">
                                         <span>пн-пт:</span>
@@ -582,7 +582,7 @@
         </section>
         <section class="text text_fullscreen">
             <div class="uk-container">
-                <h2 class="uk-h1">Врачи клиники Дентко: специалисты, которым доверяют</h2>
+                <span class="uk-h1">Врачи клиники Дентко: специалисты, которым доверяют</span>
                 <p class="uk-text uk-text-medium">Выбирая медицинский центр для лечения зубов, люди нередко советуются со знакомыми и ищут высококлассного специалиста. Ведь именно от его квалификации, опыта и аккуратности на 70% зависит срок службы пломб и протезов. В стоматологии «Дентко» работают врачи, за результат работы которых вы можете быть уверены:</p>
                 <div class="uk-column-1-2@s uk-width-child-1-2">
                     <p class="uk-text text__item">В штате нашей клиники работают стоматологи только 1 и высшей квалификационных категорий;</p>
@@ -602,7 +602,7 @@
                             </div>
                         </div>
                         <div class="about__side">
-                            <h2 class="uk-h1">Сколько стоят услуги стоматолога в Дентко?</h2>
+                            <span class="uk-h1">Сколько стоят услуги стоматолога в Дентко?</span>
                             <p class="uk-text-normal">Выбирая клинику, важно понимать, что цены на стоматологические услуги в Минске формируются не на основании амбиций медицинского центра, а на вполне объективных факторах. Значение имеют:</p>
                             <ul class="uk-list">
                                 <li><span class="uk-text-bold">Уровень квалификации врачей.</span> Хорошие стоматологи требуют высокой оплаты труда;</li>
@@ -620,7 +620,7 @@
         </section>
         <section class="text text_fullscreen">
             <div class="uk-container">
-                <h2 class="uk-h1">5 причин лечить зубы в Дентко</h2>
+                <span class="uk-h1">5 причин лечить зубы в Дентко</span>
                 <p class="uk-text uk-text-medium">Наш медицинский центр вполне можно назвать семейным. Ведь мы предлагаем услуги лечения и профилактики для малышей и взрослых. Наши врачи всегда подскажут вам, как сберечь здоровье зубов и не платить большие деньги за их восстановление. Кроме того, мы готовы предоставить нашим пациентам 5 неоспоримых преимуществ:</p>
                 <div class="uk-column-1-2@s uk-width-child-1-2">
                     <p class="uk-text text__item">Высокая квалификация и опыт врачей;</p>
@@ -697,7 +697,7 @@
                     </dd>
                 </dl>
                 <div class="uk-card uk-card-body footer__schedule">
-                    <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                    <span class="footer__card-header uk-text-bold">Время работы:</span>
                     <div class="footer__card-body uk-flex uk-flex-between">
                         <div class="footer__card-col uk-flex uk-flex-column">
                             <span>пн-пт:</span>
@@ -732,7 +732,7 @@
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <form class="popup__body">
-                <h2 class="uk-h1">Записаться на прием</h2>
+                <span class="uk-h1">Записаться на прием</span>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
                     <div class="uk-input form__div">
@@ -768,7 +768,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
+                <span class="uk-h1 uk-text-center">Ваша заявка принята!</span>
                 <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
             </div>
         </div>
@@ -777,7 +777,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Произошла ошибка!</h2>
+                <span class="uk-h1 uk-text-center">Произошла ошибка!</span>
                 <p class="uk-text uk-text-center uk-text-small">По техническим причинам ваша заявка не была принята, попробуйте немного позже.</p>
             </div>
         </div>
