--- a/dentko/reviews/reviews.html
+++ b/dentko/reviews/reviews.html
@@ -26,7 +26,7 @@
                         <div class="uk-inline header__dropdown-trigger">
                             <span class="header__dropdown-span">Без выходных <img src="/dentko/img/info.svg"></span>
                             <div class="uk-card uk-card-body uk-margin-remove-top header__dropdown-card">
-                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <span class="footer__card-header uk-text-bold">Время работы:</span>
                                 <div class="footer__card-body uk-flex uk-flex-between">
                                     <div class="footer__card-col uk-flex uk-flex-column">
                                         <span>пн-пт:</span>
@@ -221,7 +221,7 @@
     </div>
     <div class="mobile-menu">
         <div class="mobile-menu__services">
-            <h3 class="mobile-menu__title">Наши услуги</h3>
+            <span class="mobile-menu__title">Наши услуги</span>
             <ul uk-accordion>
                 <li>
                     <a class="uk-accordion-title mobile-menu__accordion" href="#">Лечение зубов</a>
@@ -358,7 +358,7 @@
     </div>
     <div class="mobile-menu">
         <div class="mobile-menu__services">
-            <h3 class="mobile-menu__title">Наши услуги</h3>
+            <span class="mobile-menu__title">Наши услуги</span>
             <ul uk-accordion>
                 <li>
                     <a class="uk-accordion-title mobile-menu__accordion" href="#">Лечение зубов</a>
@@ -505,15 +505,18 @@
         <section class="reviews reviews_page">
             <div class="uk-container">
                 <div class="uk-flex uk-flex-between uk-flex-middle reviews__header">
-                    <h2 class="uk-h1">Отзывы наших клиентов</h2>
+                    <span class="uk-h1">Отзывы наших клиентов</span>
                     <button class="uk-button uk-button-default button button_big">Оставить отзыв<img src="/dentko/img/inline-arrow-w.svg"></button>
                 </div>
                 <div class="reviews__wrap uk-child-width-1-1">
                     <div class="uk-card uk-card-body review review__page">
                         <div class="review__head uk-flex uk-flex-between uk-flex-top">
                             <div class="review__info">
-                                <h4 class="review__name">Виктория</h4>
-                                <img src="/dentko/img/rating.png" alt="Рейтинг" class="review__rating">
+                                <span class="review__name">Виктория</span>
+                                <!-- .review__rating_3-5  задает количество звездочек с шагом 0.5 от 0 до 5. В данном случае рейтинг будет 3.5 -->
+                                <span class="review__rating review__rating_3-5"> 
+                                    <span class="review__stars"></span>
+                                </span>
                             </div>
                             <div class="review__body">
                                 <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -524,8 +527,10 @@
                     <div class="uk-card uk-card-body review review__page">
                         <div class="review__head uk-flex uk-flex-between uk-flex-top">
                             <div class="review__info">
-                                <h4 class="review__name">Виктория</h4>
-                                <img src="/dentko/img/rating.png" alt="Рейтинг" class="review__rating">
+                                <span class="review__name">Виктория</span>
+                                <span class="review__rating review__rating_2">
+                                    <span class="review__stars"></span>
+                                </span>
                             </div>
                             <div class="review__body">
                                 <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -536,8 +541,10 @@
                     <div class="uk-card uk-card-body review review__page">
                         <div class="review__head uk-flex uk-flex-between uk-flex-top">
                             <div class="review__info">
-                                <h4 class="review__name">Виктория</h4>
-                                <img src="/dentko/img/rating.png" alt="Рейтинг" class="review__rating">
+                                <span class="review__name">Виктория</span>
+                                <span class="review__rating review__rating_3">
+                                    <span class="review__stars"></span>
+                                </span>
                             </div>
                             <div class="review__body">
                                 <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -548,8 +555,10 @@
                     <div class="uk-card uk-card-body review review__page">
                         <div class="review__head uk-flex uk-flex-between uk-flex-top">
                             <div class="review__info">
-                                <h4 class="review__name">Виктория</h4>
-                                <img src="/dentko/img/rating.png" alt="Рейтинг" class="review__rating">
+                                <span class="review__name">Виктория</span>
+                                <span class="review__rating review__rating_3">
+                                    <span class="review__stars"></span>
+                                </span>
                             </div>
                             <div class="review__body">
                                 <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -560,8 +569,10 @@
                     <div class="uk-card uk-card-body review review__page">
                         <div class="review__head uk-flex uk-flex-between uk-flex-top">
                             <div class="review__info">
-                                <h4 class="review__name">Виктория</h4>
-                                <img src="/dentko/img/rating.png" alt="Рейтинг" class="review__rating">
+                                <span class="review__name">Виктория</span>
+                                <span class="review__rating review__rating_3">
+                                    <span class="review__stars"></span>
+                                </span>
                             </div>
                             <div class="review__body">
                                 <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -572,8 +583,10 @@
                     <div class="uk-card uk-card-body review review__page">
                         <div class="review__head uk-flex uk-flex-between uk-flex-top">
                             <div class="review__info">
-                                <h4 class="review__name">Виктория</h4>
-                                <img src="/dentko/img/rating.png" alt="Рейтинг" class="review__rating">
+                                <span class="review__name">Виктория</span>
+                                <span class="review__rating review__rating_3">
+                                    <span class="review__stars"></span>
+                                </span>
                             </div>
                             <div class="review__body">
                                 <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -584,8 +597,10 @@
                     <div class="uk-card uk-card-body review review__page">
                         <div class="review__head uk-flex uk-flex-between uk-flex-top">
                             <div class="review__info">
-                                <h4 class="review__name">Виктория</h4>
-                                <img src="/dentko/img/rating.png" alt="Рейтинг" class="review__rating">
+                                <span class="review__name">Виктория</span>
+                                <span class="review__rating review__rating_3">
+                                    <span class="review__stars"></span>
+                                </span>
                             </div>
                             <div class="review__body">
                                 <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -610,7 +625,7 @@
         <section id="form" class="form">
             <div class="uk-container">
                 <div class="form__body">
-                    <h2 class="uk-h2">Оставить отзыв</h2>
+                    <span class="uk-h2">Оставить отзыв</span>
                     <p class="uk-text-meta">Пожалуйста, проверьте правильность введенных данных.</p>
                     <form class="uk-flex uk-flex-bottom">
                         <div class="form__inputs">
@@ -704,7 +719,7 @@
                     </dd>
                 </dl>
                 <div class="uk-card uk-card-body footer__schedule">
-                    <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                    <span class="footer__card-header uk-text-bold">Время работы:</span>
                     <div class="footer__card-body uk-flex uk-flex-between">
                         <div class="footer__card-col uk-flex uk-flex-column">
                             <span>пн-пт:</span>
@@ -739,7 +754,7 @@
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <form class="popup__body">
-                <h2 class="uk-h1">Записаться на прием</h2>
+                <span class="uk-h1">Записаться на прием</span>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
                     <div class="uk-input form__div">
@@ -775,7 +790,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
+                <span class="uk-h1 uk-text-center">Ваша заявка принята!</span>
                 <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
             </div>
         </div>
@@ -784,7 +799,7 @@
         <div class="uk-position-relative popup popup_sucsess">
             <span class="uk-position-absolute popup__close popup-close"></span>
             <div class="popup__body">
-                <h2 class="uk-h1 uk-text-center">Произошла ошибка!</h2>
+                <span class="uk-h1 uk-text-center">Произошла ошибка!</span>
                 <p class="uk-text uk-text-center uk-text-small">По техническим причинам ваша заявка не была принята, попробуйте немного позже.</p>
             </div>
         </div>
